force-app/main/default/objects/SecurityInboundConfig__mdt/SecurityInboundConfig__mdt.object-meta.xml
<CustomObject>
    <description>인바운드 보안 액션 URL 서명 검증용 설정. Default 레코드의 Secret__c를 오그에서 설정하세요.</description>
    <label>Security Inbound Config</label>
</CustomObject>