force-app/main/default/objects/SecurityInboundConfig__mdt/fields/AllowedRefererHosts__c.field-meta.xml
<CustomField>
    <fullName>AllowedRefererHosts__c</fullName>
    <description>허용 Referer/Origin 호스트(쉼표 구분). 팀즈만 허용 시: teams.microsoft.com,teams.e.microsoft.com. 비우면 출처 검사 생략.</description>
    <label>Allowed Referer Hosts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>