force-app/main/default/objects/SecurityInboundConfig__mdt/fields/EnableWebhookSignature__c.field-meta.xml
<CustomField>
    <fullName>EnableWebhookSignature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true면 POST 요청 시 X-Webhook-Signature 헤더 검증. sha256=base64(hmac-sha256(body, Secret__c))</description>
    <label>Enable Webhook Signature</label>
    <type>Checkbox</type>
</CustomField>