force-app/main/default/objects/SecurityInboundConfig__mdt/fields/IsSystemEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsSystemEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>false면 SOAR 전체 Kill-Switch. 액션 실행 및 인바운드 처리 중단.</description>
    <label>Is System Enabled</label>
    <type>Checkbox</type>
</CustomField>