force-app/main/default/objects/SecurityInboundConfig__mdt/fields/Secret__c.field-meta.xml
<CustomField>
    <fullName>Secret__c</fullName>
    <description>HMAC 서명용 비밀값. 팀즈 카드 링크 변조 방지.</description>
    <label>Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>