force-app/main/default/objects/SecurityInboundConfig__mdt/fields/ThrottleMaxPerMinute__c.field-meta.xml
<CustomField>
    <fullName>ThrottleMaxPerMinute__c</fullName>
    <description>동일 사용자+정책+액션당 분당 최대 실행 횟수. 0이면 Throttling 비활성화.</description>
    <label>Throttle Max Per Minute</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>