force-app/main/default/objects/SecurityInboundConfig__mdt/fields/ValidSeconds__c.field-meta.xml
<CustomField>
    <fullName>ValidSeconds__c</fullName>
    <description>링크 유효 시간(초). 이 시간이 지나면 토큰 검증 실패. 미설정 시 300(5분).</description>
    <label>Valid Seconds</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>